6-exmaples/curl-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: curl-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: curl-client
  template:
    metadata:
      labels:
        app: curl-client
    spec:
      containers:
      - name: curl
        image: curlimages/curl:latest
        command: ["sleep", "infinity"]
---
apiVersion: v1
kind: Service
metadata:
  name: curl-client
spec:
  selector:
    app: curl-client
  ports:
  - port: 80
    targetPort: 80
