6-exmaples/flask-hello-service-deploy-spire.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-hello
  namespace: test1
spec:
  selector:
    app: flask-hello
  ports:
  - name: http      # ★ Istio port naming convention  (for HTTP 인식)
    protocol: TCP
    port: 80
    targetPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-hello
  namespace: test1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-hello
  template:
    metadata:
      labels:
        app: flask-hello
    spec:
      containers:
      - name: flask-hello
        image: 129.6.142.13:8443/flask-hello:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: spire-agent-socket
          mountPath: /run/spire/sockets
          readOnly: true
      - name: client
        image: ghcr.io/spiffe/spire-agent:1.5.1
        command: ["/opt/spire/bin/spire-agent"]
        args: [ "api", "watch",  "-socketPath", "/run/spire/sockets/agent.sock" ]
        volumeMounts:
        - name: spire-agent-socket
          mountPath: /run/spire/sockets
          readOnly: true
      imagePullSecrets:
      - name: registry-ca

      volumes:
      - name: spire-agent-socket
        hostPath:
          path: /run/spire/sockets
          type: DirectoryOrCreate
