6-exmaples/istio-flask-hello-gw-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: flask-gateway
spec:
  selector:
    istio: ingressgateway  # Istio 기본 gateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: flask-hello
spec:
  hosts:
  - "*"
  gateways:
  - flask-gateway
  http:
  - match:
    - uri:
        prefix: /hello
    route:
    - destination:
        host: flask-hello
        port:
          number: 80
